tests/NormalTests/paczka1/small_fuzzy/54758566.err
Error in line 1: oWuPaAaR A602 26,9
Error in line 13: oWuPaAaR A928 293,5
Error in line 8: xAag0AoAm A928 21,6
